src/snc-alert-email-preview/styles.scss
@import '@servicenow/sass-kit/host';

@import url('https://fonts.googleapis.com/css?family=Roboto:300&display=swap');

* {
  box-sizing: border-box;
}

.g-icon {
  fill: RGB($now-color--primary-1);
  &.green {
    fill: rgba(119, 178, 123, 1);
  }
}

#info-container {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  background-color: RGB($now-color_background--tertiary);
  border-radius: 4px;
  color: RGB($now-color_text--primary);
  //width: 40vw;
  height: 100%;
  padding: 12px;
  font-size: 1rem;
  font-family: $now-font-family;
  #info-header {
    display: flex;
    justify-content: space-between;
    margin-right: 5px;
    h1 {
      font-weight: 100;
      font-size: 1.625rem;
      margin-top: 0;
    }
    #right-side {
      text-align: end;
    }
    .g-icon {
      margin-right: 10px;
      fill: RGB($now-color_text--primary);
      &:hover {
        fill: RGB($now-color_text--tertiary);
      }
    }
    .inline-header {
      //display: inline-block;
      font-weight: 100;
      font-size: 1.3rem;
    }
    .inline-header-2 {
      font-weight: 100;
      font-size: 1.1rem;
      color: rgba(119, 178, 123, 1);
    }
  }
}

#cards-header {
  .tabset > input[type="radio"] {
    position: absolute;
    left: -500vw;
  }

  .tabset .tab-panel {
    display: none;
  }

  .tabset > input:first-child:checked ~ .tab-panels > .tab-panel:first-child,
  .tabset > input:nth-child(3):checked ~ .tab-panels > .tab-panel:nth-child(2),
  .tabset > input:nth-child(5):checked ~ .tab-panels > .tab-panel:nth-child(3),
  .tabset > input:nth-child(7):checked ~ .tab-panels > .tab-panel:nth-child(4),
  .tabset > input:nth-child(9):checked ~ .tab-panels > .tab-panel:nth-child(5),
  .tabset > input:nth-child(11):checked ~ .tab-panels > .tab-panel:nth-child(6) {
    display: block;
  }

  .tabset > label {
    position: relative;
    display: inline-block;
    padding: 15px 15px 25px;
    cursor: pointer;
    color: RGB($now-color_text--primary);
  }

  .tabset > label::after {
    content: "";
    position: absolute;
    left: 15px;
    bottom: 10px;
    width: 22px;
    height: 4px;
    background: RGB($now-color_divider--primary);
    border-radius: 6px;
  }

  // .tabset > label:hover,
  // .tabset > input:focus + label {
  //   background: RGB($now-color--secondary-0);
  //   border-radius: 6px;
  // }

  .tabset > label:hover::after,
  .tabset > input:focus + label::after,
  .tabset > input:checked + label::after {
    background: RGB($now-color--primary-1);
    border-radius: 6px;
  }

  .tabset > input:checked + label {
    margin-bottom: -1px;
  }
}

#info-cards {
  height: 63vh;
  overflow-y: auto;

  > ul {
    list-style-type:none;
    border-left: 2px solid RGB($now-color--primary-2);
    padding: 0 1em;
    margin-left: 10px;
    margin-right: 0;
  }
  > ul .info-card {
    position: relative;
    transition: .5s;
  }
  > ul .info-card:before {
    position: absolute;
    content: '';
    width: 10px;
    height: 10px;
    background-color:#34ace0;
    border-radius:50%;
    left: -23px;
    top: 20px;
    transition:.5s;
  }
  > ul .info-card:hover:before {
    background-color:#0F0;
	  box-shadow:0px 0px 5px 2px #0F0;
  }

  &::-webkit-scrollbar {
    width: 16px;
  }
  &::-webkit-scrollbar-track {
    background: RGB($now-color_background--secondary);
    border-radius: 8px;
  }
  &::-webkit-scrollbar-thumb {
    background: RGB($now-color--primary-1);
    border-radius: 8px;
    border: 3px solid RGB($now-color_background--secondary);
  }
  &::-webkit-scrollbar-thumb:hover {
    background: RGB($now-color--primary-2);
  }
  &::-webkit-scrollbar-corner {
		opacity: 0;
	}
}

.info-card {
  background-color: RGB($now-color_background--secondary);
  border: 1px solid RGB($now-color_border--primary);
  border-radius: 6px;
  padding: 12px;
  margin-bottom: 1em;
  margin-top: 1em;

  .card-header {
    display: grid;
    grid-template-columns: auto auto;
    justify-content: space-between;
    align-content: space-between;
    height: 50px;

    .right {
      margin-right: 30px;
    }
  }

  .full-width {
    width: 100%;
  }

  .card-body {
    .prc-key-value {
      display: flex;
      align-items: center;
      justify-content: flex-start;
    }
    &.overflow {
      overflow-x: auto;
    }

    pre {
      overflow-x: auto;
    }

    .key {
      //font-weight: bold;
      color: RGB($now-color--primary-1);
    }
    .card-row {
      display: flex;
    }
    .card-column {
      flex: 50%;
      p {
        word-break: break-word;
      }
    }
    .card-center {
      display: flex;
      justify-content: center;
      align-items: flex-start;
    }
    .card-image-wrapper {
      position: relative;
      overflow: hidden;
      width: 452px;
      height: 185px;
      border: 2px solid RGB($now-color--primary-1);
    }
    .card-image {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background-position: center;
      background-size: cover;
      background-repeat: no-repeat;
      -webkit-transition: -webkit-transform .5s ease-out;
      transition: -webkit-transform .5s ease-out;
      transition: transform .5s ease-out;
      transition: transform .5s ease-out,-webkit-transform .5s ease-out;
    }
    .description {
      border-bottom: 1px solid RGB($now-color_border--primary);
      //border-top: 1px solid RGB($now-color_border--primary);
      padding: 4px;
      margin: 8px 0px;
      width: 100%;
    }
    .bottom {
      margin-bottom: 8px;
    }
    .green {
      color: rgba(119, 178, 123, 1);
    }
    .tags, .tags-title {
      display: flex;
      text-align: center;
      flex-wrap: wrap;
      align-items: center;
    }
    .tags {
      margin-bottom: 1em;
    }

    .broker-tag {
      background-color: RGB($now-color--primary-1);
      color: RGB($now-color_text--primary);
      padding: 0px 2px;
      margin: 2px;
      border-radius: 6px;
      .tag-key {
        font-weight: bold;
        font-size: 0.9em;
      }
      &.green {
        background-color: rgba(119, 178, 123, 1);
      }
    }
    .work-notes {
      .work-notes-header {
        display: flex;
        align-items: center;
        justify-content: flex-start;
        color: RGB($now-color--primary-1);
      }
    }
    .work-note {
      margin-top: 1em;
      margin-bottom: 1em;
      .work-note-content {
        display: flex;
        align-items: center;
        justify-content: flex-start;
        column-gap: 8px;
        // .work-note-avatar {
        //   border-radius: 50%;
        //   border: 1px solid RGB($now-color_border--primary);
        // }
        .work-note-text {
          background-color: RGB($now-color_background--tertiary);
          border: 1px solid RGB($now-color_border--primary);
          border-radius: 6px;
          padding: 8px;
          margin-left: 8px;
          .work-note-header {
            display: flex;
            align-items: center;
            justify-content: space-between;
            margin-bottom: 2px;
            .work-note-relative-time {
              display: flex;
              align-items: center;
              color: RGB($now-color--primary-1);
            }
          }
        }
      }
    }
  }
}

.dials-container {
  // Colors
  $greenColor: rgba(119, 178, 123, 1);
  $orangeColor: rgba(234, 186, 117, 1);
  $yellowColor: rgba(227, 218, 96, 1);
  $barColor: var(--bar-color);
  .green {
    --bar-color: #{$greenColor};
  }
  .orange {
    --bar-color: #{$orangeColor};
  }
  .yellow {
    --bar-color: #{$yellowColor};
  }
  $overlayColor: #fffde8;
  $dbg: #2f3439;
  $size: 80px;

  $bg: lighten($dbg,20%);
  $bdiam: ($size/4)-10;

  float: left;
  display: flex;

  .dial {
    padding: 2px;
    text-align: center;
  }

  .dial-description {
    font-size: 0.6em;
    text-align: center;
    top: -50px;
    position: relative;
    color: $overlayColor;
  }

  .progress-radial {
    display: inline-block;
    margin: 10px;
    position: relative;
    width: $size;
    height: $size;
    border-radius: 50%;
    //border: 10px solid $bg; // remove gradient color
    background-color: $barColor; // default 100%
    box-shadow: 0 2px 15px rgba($now-color_background--primary, 0.3);
    &:after,
    &:before {
      content: '';
      width: $bdiam;
      height: $bdiam;
      top: 50%;
      left: 50%;
      border-radius: 50%;
      margin-left: -($bdiam/2);
      margin-top: -($bdiam/2);
      background: $barColor;
      position: absolute;
      z-index: 999;
      box-shadow: 10px 0 10px rgba(0,0,0,.2);
    }
    &:after {
      z-index: 998;
      box-shadow: none;
      transform: translate(0,-($size/2)+($bdiam/2));
    }
    b:after {
      color: $overlayColor;
      text-shadow: 0 1px 2px rgba(0,0,0,.6);
      position: absolute;
      font-weight: 900;
      left: 50%;
      top: 50%;
      width: 50%;
      height: 50%;
      background-color: $dbg;
      border-radius: 50%;
      margin-left: -25%;
      margin-top: -25%;
      text-align: center;
      line-height: $size / 2;
      font-size: $size / 6;
      box-shadow: 0 2px 3px rgba(0,0,0,.3) inset, 0 0 0 10px $bg;
    }
  }

  $step: 1;
  $loops: round(100 / $step);
  $increment: 360 / $loops;
  $half: round($loops / 2);
  @for $i from 0 through $loops {
    .progress-#{$i*$step} {
      &:before {
        transform: rotate(#{$i*3.6}deg) translate(0,-($size/2)+($bdiam/2));
      }
      // &.green {
      //   b:after {
      //     content: '#{$i}% \A NR';
      //     white-space: normal;
      //   }
      // }
      // &.orange {
      //   b:after {
      //     content: '#{$i}% \A AC';
      //     white-space: normal;
      //   }
      // }
      // &.yellow {
      //   b:after {
      //     content: '#{$i}% \A IR';
      //     white-space: normal;
      //   }
      // }
      b:after {
        content: '#{$i}%';
      }
      @if $i < $half {
        $nextdeg: 90deg + ( $increment * $i );
        background-image:
          linear-gradient(90deg, $bg 50%, transparent 50%, transparent),
          linear-gradient($nextdeg, $barColor 50%, $bg 50%, $bg);
      } @else {
        $nextdeg: -90deg + ( $increment * ( $i - $half ) );
        background-image:
          linear-gradient($nextdeg, $barColor 50%, transparent 50%, transparent),
          linear-gradient(270deg, $barColor 50%, $bg 50%, $bg);
      }
    }
  }
}

.primary-color {
  color: RGB($now-color--primary-1);
	fill: RGB($now-color--primary-1) !important;
}

.record-link {
  border-radius:25px;
	padding:2px 5px;
  background-color:RGB($now-color--primary-1);
  cursor: pointer;
}

.record-link:hover {
  background-color: RGB($now-color--primary-0);
}

.circle-tag {
	color: RGB($now-color_text--primary);
	background-color: rgba(119, 178, 123, 1);
	border-radius: 50%;
	height: 35px;
	width: 35px;
	text-align: center;
	line-height: 35px;
  display: inline-block;

  &.secondary {
    background-color: RGB($now-color_alert--moderate-1);
  }
}

.underline-record-link {
	border-bottom: 2px solid RGB($now-color--primary-1);
	&:hover {
		border-color: RGB($now-color--primary-2);
	}
}

